<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_SafetyGroupTag" Id="{41a9291d-6e2d-494e-8706-600356b51892}">
    <Declaration><![CDATA[TYPE ST_SafetyGroupTag :
STRUCT
	sTitle	:STRING(80);
	bOutputSAFE	:BOOL;
	bError	:BOOL;
	bRun	:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>